# earl

./: .release-please-manifest.json  CHANGELOG.md  CROSSCOMPILE.md  Cargo.toml  Cross.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/workflows/: ci.yml  codeql.yml  release-notes.yml  release-please.yml  release.yml
crates/earl-core/: CHANGELOG.md  Cargo.toml
crates/earl-core/src/: lib.rs  render.rs  schema.rs  with.rs
crates/earl-protocol-bash/: CHANGELOG.md  Cargo.toml
crates/earl-protocol-bash/src/: builder.rs  executor.rs  lib.rs  sandbox.rs  schema.rs
crates/earl-protocol-browser/: CHANGELOG.md  Cargo.toml
crates/earl-protocol-browser/src/: accessibility.rs  builder.rs  error.rs  executor.rs  launcher.rs  lib.rs  schema.rs  session.rs  steps.rs
crates/earl-protocol-browser/tests/: assertions.rs  cookies.rs  dialogs.rs  forms.rs  integration.rs  javascript.rs  keyboard_mouse.rs  pdf.rs  scraping.rs  screenshot.rs  session_mode.rs  storage.rs
crates/earl-protocol-browser/tests/common/: mod.rs  server.rs
crates/earl-protocol-grpc/: CHANGELOG.md  Cargo.toml
crates/earl-protocol-grpc/src/: executor.rs  lib.rs  schema.rs
crates/earl-protocol-http/: CHANGELOG.md  Cargo.toml
crates/earl-protocol-http/src/: executor.rs  lib.rs  schema.rs  sse.rs
crates/earl-protocol-sql/: CHANGELOG.md  Cargo.toml
crates/earl-protocol-sql/src/: sandbox.rs  schema.rs
docs/: testing.md
docs/plans/: 2026-02-23-recall-ai-design.md
examples/: auth0.hcl  cloudflare.hcl  datadog.hcl  github.hcl  gitlab.hcl  linear.hcl  openai.hcl  pagerduty.hcl  recall_ai.hcl  render.hcl  shopify.hcl  slack.hcl  supabase.hcl
examples/3p/: airtable.hcl  anthropic.hcl  discord.hcl  github.hcl  hubspot.hcl  jira.hcl  mailchimp.hcl  notion.hcl  render.hcl  resend.hcl  sendgrid.hcl  sentry.hcl  slack.hcl  stripe.hcl  twilio.hcl  vercel.hcl
examples/browser/: ai_navigate.hcl  login.hcl  scrape.hcl  screenshot.hcl
examples/graphql/: github.hcl
examples/grpc/: health.hcl
examples/http/: github.hcl
examples/sql/: analytics.hcl
scripts/: install.ps1  install.sh
scripts/release/: build-artifact.sh
site/: mdx-components.tsx  package.json  tsconfig.json
site/app/: layout.tsx
site/app/docs/: layout.tsx
site/app/docs/[[...slug]]/: page.tsx
site/content/docs/: agent-assisted-setup.mdx  agent-skills.mdx  auth.mdx  bash.mdx  best-practices.mdx  browser.mdx  commands.mdx  configuration.mdx  environments.mdx  external-secrets.mdx  graphql.mdx  grpc.mdx  hardening.mdx  how-earl-works.mdx  http.mdx  index.mdx  installation.mdx  mcp.mdx  meta.json  policy-engine.mdx  quick-start.mdx  secrets-and-auth.mdx  secrets.mdx  security.mdx  sql.mdx  streaming.mdx  template-schema.mdx  templates.mdx  troubleshooting.mdx
site/lib/: icons.tsx
skills/3p/recall_ai/: SKILL.md
skills/create-template/: SKILL.md
skills/create-template/references/: environments.md
skills/development/create-template/: SKILL.md
skills/development/migrate-to-earl/: SKILL.md
skills/development/migrate-to-earl/references/: cli-to-earl-mapping.md
skills/development/setup-earl/: SKILL.md
skills/development/troubleshoot-earl/: SKILL.md
skills/earl/: SKILL.md
skills/migrate-to-earl/: SKILL.md
skills/migrate-to-earl/references/: cli-to-earl-mapping.md
skills/references/: bash-templates.md  graphql-templates.md  grpc-templates.md  http-templates.md  mcp-integration.md  secrets-and-auth.md  sql-templates.md  template-quick-ref.md
skills/secure-agent/: SKILL.md
skills/setup-earl/: SKILL.md
skills/troubleshoot-earl/: SKILL.md
src/: app.rs  cli.rs  config.rs  doctor.rs
src/auth/: oauth2.rs  profiles.rs
src/expression/: binder.rs
src/mcp/: auth.rs  mod.rs  policy.rs
src/output/: mod.rs  stream.rs
src/protocol/: builder.rs  executor.rs
src/search/: remote_openai_compat.rs
src/secrets/: mod.rs  resolver.rs  store.rs
src/secrets/resolvers/: aws.rs  azure.rs  gcp.rs  mod.rs  onepassword.rs  vault.rs
src/security/: dns.rs  ssrf.rs
src/template/: cache.rs  catalog.rs  environments.rs  files.rs  import.rs  loader.rs  mod.rs  parser.rs  render.rs  schema.rs  validator.rs
src/web/: mod.rs
tests/: auth_oauth2.rs  auth_profiles.rs  auth_token_store.rs  bash_executor.rs  bash_streaming.rs  cli_args.rs  cli_doctor.rs  cli_mcp.rs  cli_templates.rs  cli_web.rs  environments.rs  expression_binder.rs  http_builder.rs  http_decode_extract_transport.rs  http_executor.rs  output_rendering.rs  search_index.rs  search_service.rs  secrets_1password.rs  secrets_aws.rs  secrets_azure.rs  secrets_gcp.rs  secrets_index_and_store.rs  secrets_manager.rs  secrets_resolver_integration.rs  secrets_vault.rs  security_allowlist_ssrf.rs  security_redact.rs  sql_executor.rs  streaming_decode_extract.rs  streaming_output.rs  streaming_template_validation.rs  template_loader_precedence.rs  template_render.rs  template_validation.rs
tests/fixtures/: environments_test.hcl
tests/fixtures/templates/: external_secret_ref.hcl
web/: package.json
