[package]
name = "earl-core"
version = "0.4.1"
edition.workspace = true
description = "Shared types and traits for earl protocol crates"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
