[package]
name = "earl-protocol-bash"
version = "0.4.1"
edition.workspace = true
description = "Bash sandboxed execution protocol for earl"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0"
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
earl-core = { version = "0.4.1", path = "../earl-core" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util", "time", "rt"] }
