[package]
name = "earl-protocol-grpc"
version = "0.3.0"
edition.workspace = true
description = "gRPC execution protocol for earl"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0"
earl-core = { version = "0.3.0", path = "../earl-core" }
granc_core = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
