[package]
name = "earl-protocol-grpc"
version = "0.5.1"
edition.workspace = true
description = "gRPC execution protocol for earl"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["grpc", "agent", "protocol", "rpc"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0"
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
earl-core = { version = "0.5.1", path = "../earl-core" }
futures-util = "0.3"
http = "1"
http-body = "1"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-reflection = "0.14"
url = "2.5"
