[package]
name = "earl-protocol-http"
version = "0.3.0"
edition.workspace = true
description = "HTTP and GraphQL execution protocol for earl"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
earl-core = { version = "0.3.0", path = "../earl-core" }
reqwest = { version = "0.13.2", features = [
    "json", "multipart", "gzip", "brotli", "deflate", "zstd", "rustls", "query", "form",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
