[package]
name = "earl-protocol-http"
version = "0.5.0"
edition.workspace = true
description = "HTTP and GraphQL execution protocol for earl"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0"
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
base64 = "0.22"
earl-core = { version = "0.5.0", path = "../earl-core" }
reqwest = { version = "0.13.2", features = [
    "json", "multipart", "gzip", "brotli", "deflate", "zstd", "rustls", "query", "form",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
url = "2.5"
