[package]
name = "earl-protocol-sql"
version = "0.5.1"
edition.workspace = true
description = "SQL execution protocol for earl (sqlx)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0"
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
earl-core = { version = "0.5.1", path = "../earl-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
] }
tokio = { version = "1", features = ["time"] }
